# AdaPT-tunnel

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  SPEC_v1.md  SPEC_v2.md
.cargo/: config.toml
.github/workflows/: ci.yml  release-assets.yml
apps/apt-client/: Cargo.toml
apps/apt-client/src/: cli.rs  daemon_client.rs  import.rs  main.rs  override_config.rs  paths.rs  service.rs  tui.rs  up.rs
apps/apt-client/src/qa/: mod.rs  probes.rs  process.rs
apps/apt-clientd/: Cargo.toml
apps/apt-clientd/src/: cli.rs  daemon.rs  ipc.rs  latency.rs  main.rs  supervisor.rs
apps/apt-edge/: Cargo.toml
apps/apt-edge/src/: bundle.rs  cli.rs  import.rs  init.rs  main.rs  start.rs  startup.rs  support.rs
apps/apt-tunneld/: Cargo.toml
apps/apt-tunneld/src/: main.rs
crates/apt-admission/: Cargo.toml
crates/apt-admission/src/: client.rs  lib.rs  packet.rs  payload.rs  server.rs  tests.rs  upgrade.rs
crates/apt-admission/src/client/: envelope.rs  mod.rs  wrapper.rs
crates/apt-admission/src/server/: handshake.rs  model.rs
crates/apt-admission/src/server/public_session/: helpers.rs  mod.rs  ug1.rs  ug3.rs
crates/apt-bundle/: Cargo.toml
crates/apt-bundle/src/: client_override.rs  import.rs  lib.rs
crates/apt-carriers/: Cargo.toml
crates/apt-carriers/src/: lib.rs
crates/apt-client-control/: Cargo.toml
crates/apt-client-control/src/: lib.rs
crates/apt-crypto/: Cargo.toml
crates/apt-crypto/src/: admission.rs  lib.rs  noise.rs  opaque.rs  session.rs  tests.rs  tunnel.rs
crates/apt-harness/: Cargo.toml
crates/apt-harness/fixtures/: adapt-v2-h2-h2c-trace.json  adapt-v2-h2-probes.json  adapt-v2-h2-retry.json  adapt-v2-h2-subject.json  adapt-v2-h2-tls-trace.json  browser-h2-baseline-trace.json  browser-h2-baseline.json  manifest.json
crates/apt-harness/src/: compare.rs  corpus.rs  lib.rs  report.rs  tests.rs  trace.rs
crates/apt-observability/: Cargo.toml
crates/apt-observability/src/: lib.rs
crates/apt-origin/: Cargo.toml
crates/apt-origin/src/: lib.rs  model.rs  profiles.rs
crates/apt-persona/: Cargo.toml
crates/apt-persona/src/: engine.rs  lib.rs  tests.rs
crates/apt-policy/: Cargo.toml
crates/apt-policy/src/: controller.rs  lib.rs  normality.rs  tests.rs
crates/apt-policy/src/normality/: buckets.rs  classify.rs  mod.rs
crates/apt-runtime/: Cargo.toml
crates/apt-runtime/src/: adaptive.rs  client_runtime.rs  config.rs  dns.rs  error.rs  keys.rs  lib.rs  quic.rs  route.rs  runtime.rs  status.rs  tun.rs  wire.rs
crates/apt-runtime/src/adaptive/: context.rs  datapath.rs  keepalive.rs  mod.rs  normality.rs  shaping.rs  tests.rs
crates/apt-runtime/src/config/: client.rs  io.rs  server.rs  state.rs  tests.rs  v2.rs
crates/apt-runtime/src/config/tests/: client.rs  io.rs  mod.rs  server.rs  v2.rs
crates/apt-runtime/src/route/: client.rs  server.rs
crates/apt-runtime/src/runtime/: client.rs  d2.rs  handshake.rs  packets.rs  pathio.rs  scheduler.rs  server.rs  session_transport.rs  support.rs  surface_h2.rs  tests.rs  transport.rs
crates/apt-runtime/src/runtime/client/: h2_session.rs  helpers.rs  session.rs
crates/apt-runtime/src/runtime/handshake/: client.rs  compat.rs  mod.rs
crates/apt-runtime/src/runtime/server/: admission.rs  events.rs  h2_service.rs  maintenance.rs  session.rs
crates/apt-runtime/src/runtime/surface_h2/: backend.rs  bridge.rs  client.rs  mod.rs  server.rs  tests.rs
crates/apt-runtime/src/runtime/surface_h2/backend/: hyper.rs  mod.rs  tls.rs
crates/apt-runtime/src/runtime/surface_h2/tests/: bridge.rs  h2c.rs  mod.rs  support.rs  tls.rs
crates/apt-runtime/src/runtime/transport/: s1.rs
crates/apt-runtime/src/wire/: admission.rs  keys.rs  mod.rs  tests.rs  tunnel.rs
crates/apt-surface-h2/: Cargo.toml
crates/apt-surface-h2/src/: api_sync.rs  json_slot.rs  lib.rs
crates/apt-surface-h2/src/api_sync/: http.rs  mod.rs  tests.rs  transport.rs
crates/apt-tunnel/: Cargo.toml
crates/apt-tunnel/src/: codec.rs  frame.rs  lib.rs  packet.rs  rekey.rs  replay.rs  session.rs  tests.rs
crates/apt-types/: Cargo.toml
crates/apt-types/src/: compat.rs  config.rs  defaults.rs  ids.rs  lib.rs  network.rs  protocol.rs  runtime.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  DEPLOYMENT.md  V2_ROADMAP.md
docs/examples/: client.example.toml  server.example.toml
guides/: DEPLOYMENT.md  MANUAL-CONFIG-SETUP.md  MANUAL-TESTING.md
guides/examples/: client.toml  server.toml
scripts/: install.sh  package-release.sh  uninstall.sh
tests/integration/: README.md
