[workspace]
resolver = "2"
members = [
  "crates/apt-bundle",
  "crates/apt-types",
  "crates/apt-crypto",
  "crates/apt-admission",
  "crates/apt-tunnel",
  "crates/apt-carriers",
  "crates/apt-runtime",
  "crates/apt-persona",
  "crates/apt-policy",
  "crates/apt-observability",
  "apps/apt-client",
  "apps/apt-edge",
  "apps/apt-tunneld",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
rust-version = "1.84"
authors = ["Jerry"]

[workspace.dependencies]
apt-bundle = { path = "crates/apt-bundle" }
apt-types = { path = "crates/apt-types" }
apt-crypto = { path = "crates/apt-crypto" }
apt-admission = { path = "crates/apt-admission" }
apt-tunnel = { path = "crates/apt-tunnel" }
apt-carriers = { path = "crates/apt-carriers" }
apt-runtime = { path = "crates/apt-runtime" }
apt-persona = { path = "crates/apt-persona" }
apt-policy = { path = "crates/apt-policy" }
apt-observability = { path = "crates/apt-observability" }

base64 = "0.22"
bincode = "1.3"
bitflags = { version = "2.6", features = ["serde"] }
blake2 = "0.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }
clap = { version = "=4.5.4", features = ["derive"] }
futures-util = { version = "0.3", features = ["sink"] }
hkdf = "0.12"
ipnet = { version = "2.11", features = ["serde"] }
parking_lot = "0.12"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
snow = { version = "=0.10.0-beta.1", features = ["risky-raw-split"] }
socket2 = "0.5"
thiserror = "2.0"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tun = { version = "=0.7.13", features = ["async", "tokio"] }
zstd = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
