[package]
name = "apt-client"
version.workspace = true
edition.workspace = true

[dependencies]
apt-bundle.workspace = true
apt-runtime.workspace = true
clap.workspace = true
ipnet.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
apt-types.workspace = true

[lints]
workspace = true
