[package]
name = "apt-clientd"
version.workspace = true
edition.workspace = true

[dependencies]
apt-bundle.workspace = true
apt-client-control.workspace = true
apt-runtime.workspace = true
clap.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
