[package]
name = "apt-bundle"
version.workspace = true
edition.workspace = true

[dependencies]
apt-runtime.workspace = true
bincode.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
zstd.workspace = true

[dev-dependencies]
apt-types.workspace = true

[lints]
workspace = true
