[package]
name = "apt-bundle"
version.workspace = true
edition.workspace = true

[dependencies]
apt-runtime.workspace = true
apt-types.workspace = true
bincode.workspace = true
chacha20poly1305.workspace = true
ipnet.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
zstd.workspace = true

[lints]
workspace = true
