[package]
name = "apt-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
apt-admission.workspace = true
apt-carriers.workspace = true
apt-client-control.workspace = true
apt-crypto.workspace = true
apt-origin.workspace = true
apt-observability.workspace = true
apt-persona.workspace = true
apt-policy.workspace = true
apt-surface-h2.workspace = true
apt-tunnel.workspace = true
apt-types.workspace = true
base64.workspace = true
bincode.workspace = true
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
ipnet.workspace = true
quinn.workspace = true
rand.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
socket2.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
toml.workspace = true
tracing.workspace = true
webpki-roots.workspace = true
tun.workspace = true
thiserror.workspace = true

[lints]
workspace = true
