[package]
name = "apt-surface-h2"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
apt-carriers.workspace = true
apt-crypto.workspace = true
apt-origin.workspace = true
apt-types.workspace = true
base64.workspace = true
bincode.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
apt-admission.workspace = true

[lints]
workspace = true
